fixed panel overflow

--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 #map-container {
@@ -14,9 +15,10 @@ body{
   
 #control-panel{
     position: absolute;
+    overflow-y: scroll;
     z-index: 3000;
     right: 0px;
     width: 400px;
-    height: 100%;
+    max-height: 100%;
     background-color: white;
 }
